Removed use of preview features of Java 17