@@ -22,13 +22,11 @@ targetCompatibility = "17"
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
-    options.compilerArgs.add("--enable-preview")
 }
 
 application {
     mainModule = 'ml.qizd.qizdlauncher'
     mainClass = 'ml.qizd.qizdlauncher.MainApplication'
-    applicationDefaultJvmArgs += ["--enable-preview"]
 }
 
 javafx {
